# Python-WPF

./: .gitignore  README.md  doc.md  pyproject.toml  requirements.txt
Backend/: README.md  backend-doc.md
Backend/extras/Postman/: patient_mockdb_get_postman_collection.json
Backend/src/patient/: banner.py  fastapi_app.py
Backend/src/patient/config/: __init__.py
Backend/src/patient/repository/: __init__.py  patient_mock_repository.py
Backend/src/patient/router/: __init__.py  dependencies.py  health_router.py  patient_router.py
Backend/src/patient/service/: __init__.py  patient_service.py
Backend/tests/integration/: common_test.py
Backend/tests/integration/rest/: conftest.py  get_by_id_test.py  get_test.py  health_test.py
Backend/tests/unit/: conftest.py  find_by_id_test.py  find_test.py
Frontend/: .markdownlint.yml  AUTHORS  FRONTEND_ERKLAERUNG.md  README.md  frontend.py  pyproject.toml  start.ps1
Frontend/config/: __init__.py  settings.py  urls.py
Frontend/patient/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
Frontend/patient/services/: __init__.py  patient_service.py
Frontend/src/frontend/: __init__.py
Frontend/static/css/: index.css  main.css  tailwind.css  theme.css
Frontend/static/js/: app.js
Frontend/templates/: 400.html  403.html  404.html  500.html  base.html
Frontend/templates/patient/: home.html  liste.html  search.html
