[project]
name = "frontend"
version = "0.1.0"
description = "Frontend mit Django"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["django>=6.0.6", "django-environ>=0.13.0", "requests>=2.34.2"]

[project.scripts]
frontend = "frontend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["frontend.py"]

[dependency-groups]
dev = ["ruff>=0.15.6"]
